--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,5 @@ keywords = ["leptos", "toast", "web", "ui", "userinterface"]
 categories = ["gui", "web-programming"]
 
 [dependencies]
-gloo-timers = { version = "0.3.0", features = ["futures"] }
-leptos = { version = "0.6.9" }
+gloo-timers = { version = "0.3", features = ["futures"] }
+leptos = "0.6"
